--- a/src/main/resources/scenesfxml/login_scene.fxml
+++ b/src/main/resources/scenesfxml/login_scene.fxml
@@ -25,7 +25,7 @@
                                 <Font size="16.0" />
                             </font>
                         </TextField>
-                        <Button fx:id="joinBtn" alignment="CENTER" layoutX="413.0" layoutY="149.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="88.0" styleClass="smallButton" text="Join">
+                        <Button fx:id="joinBtn" alignment="CENTER" layoutX="413.0" layoutY="149.0" mnemonicParsing="false" onAction="#onJoinBtnClick" prefHeight="29.0" prefWidth="88.0" styleClass="smallButton" text="Join">
                             <font>
                                 <Font size="14.0" />
                             </font>
