--- a/src/main/resources/scenesfxml/game_loop.fxml
+++ b/src/main/resources/scenesfxml/game_loop.fxml
@@ -314,6 +314,156 @@
                   <Label layoutX="465.0" layoutY="106.0" text="My friend bookshelf" />
                   <Label layoutX="485.0" layoutY="240.0" text="My bookshelf" />
                   <ScrollBar layoutX="473.0" layoutY="211.0" />
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="514.0" layoutY="283.0" onMouseClicked="#choosedCard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/17_MyShelfie_BGA/item_tiles/Trofei1.1.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="514.0" layoutY="303.0" onMouseClicked="#choosedCard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/17_MyShelfie_BGA/item_tiles/Gatti1.1.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="538.0" layoutY="283.0" onMouseClicked="#choosedCard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/17_MyShelfie_BGA/item_tiles/Trofei1.1.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="538.0" layoutY="303.0" onMouseClicked="#choosedCard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/17_MyShelfie_BGA/item_tiles/Gatti1.1.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="467.0" layoutY="283.0" onMouseClicked="#choosedCard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/17_MyShelfie_BGA/item_tiles/Piante1.2.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="467.0" layoutY="303.0" onMouseClicked="#choosedCard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/17_MyShelfie_BGA/item_tiles/Gatti1.1.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="491.0" layoutY="283.0" onMouseClicked="#choosedCard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/17_MyShelfie_BGA/item_tiles/Gatti1.1.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="491.0" layoutY="303.0" onMouseClicked="#choosedCard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/17_MyShelfie_BGA/item_tiles/Giochi1.2.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="561.0" layoutY="283.0" onMouseClicked="#choosedCard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/17_MyShelfie_BGA/item_tiles/Trofei1.1.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="561.0" layoutY="303.0" onMouseClicked="#choosedCard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/17_MyShelfie_BGA/item_tiles/Giochi1.2.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="514.0" layoutY="323.0" onMouseClicked="#choosedCard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/17_MyShelfie_BGA/item_tiles/Gatti1.1.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="514.0" layoutY="343.0" onMouseClicked="#choosedCard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/17_MyShelfie_BGA/item_tiles/Cornici1.3.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="538.0" layoutY="323.0" onMouseClicked="#choosedCard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/17_MyShelfie_BGA/item_tiles/Piante1.2.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="538.0" layoutY="343.0" onMouseClicked="#choosedCard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/17_MyShelfie_BGA/item_tiles/Trofei1.1.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="467.0" layoutY="323.0" onMouseClicked="#choosedCard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/17_MyShelfie_BGA/item_tiles/Trofei1.1.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="467.0" layoutY="343.0" onMouseClicked="#choosedCard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/17_MyShelfie_BGA/item_tiles/Cornici1.3.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="491.0" layoutY="323.0" onMouseClicked="#choosedCard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/17_MyShelfie_BGA/item_tiles/Piante1.2.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="491.0" layoutY="343.0" onMouseClicked="#choosedCard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/17_MyShelfie_BGA/item_tiles/Cornici1.3.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="561.0" layoutY="323.0" onMouseClicked="#choosedCard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/17_MyShelfie_BGA/item_tiles/Giochi1.2.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="561.0" layoutY="343.0" onMouseClicked="#choosedCard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/17_MyShelfie_BGA/item_tiles/Giochi1.2.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="514.0" layoutY="364.0" onMouseClicked="#choosedCard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/17_MyShelfie_BGA/item_tiles/Cornici1.3.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="514.0" layoutY="384.0" onMouseClicked="#choosedCard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/17_MyShelfie_BGA/item_tiles/Trofei1.1.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="538.0" layoutY="364.0" onMouseClicked="#choosedCard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/17_MyShelfie_BGA/item_tiles/Piante1.2.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="538.0" layoutY="384.0" onMouseClicked="#choosedCard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/17_MyShelfie_BGA/item_tiles/Trofei1.1.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="468.0" layoutY="364.0" onMouseClicked="#choosedCard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/17_MyShelfie_BGA/item_tiles/Trofei1.1.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="468.0" layoutY="384.0" onMouseClicked="#choosedCard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/17_MyShelfie_BGA/item_tiles/Gatti1.1.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="491.0" layoutY="364.0" onMouseClicked="#choosedCard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/17_MyShelfie_BGA/item_tiles/Piante1.2.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="491.0" layoutY="384.0" onMouseClicked="#choosedCard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/17_MyShelfie_BGA/item_tiles/Gatti1.1.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="561.0" layoutY="364.0" onMouseClicked="#choosedCard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/17_MyShelfie_BGA/item_tiles/Libri1.1.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="560.0" layoutY="384.0" onMouseClicked="#choosedCard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/17_MyShelfie_BGA/item_tiles/Libri1.1.png" />
+                     </image>
+                  </ImageView>
                </children>
             </AnchorPane>
         </items>
