--- a/src/main/resources/scenesfxml/game_loop.fxml
+++ b/src/main/resources/scenesfxml/game_loop.fxml
@@ -8,45 +8,69 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.polimi.client.view.gui.sceneControllers.GameLoopController">
+<AnchorPane prefHeight="473.0" prefWidth="645.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.polimi.client.view.gui.sceneControllers.GameLoopController">
    <children>
       <SplitPane prefHeight="423.0" prefWidth="381.0">
          <items>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0">
+            <AnchorPane prefHeight="491.0" prefWidth="476.0">
                <children>
-                  <ImageView fitHeight="438.0" fitWidth="442.0" layoutX="-1.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="491.0" fitWidth="493.0" layoutX="-1.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../images/17_MyShelfie_BGA/boards/livingroom.png" />
                      </image>
                   </ImageView>
-                  <GridPane fx:id="gridPane" layoutX="15.0" layoutY="17.0" prefHeight="401.0" prefWidth="404.0">
+                  <GridPane fx:id="gridPane" layoutX="16.0" layoutY="17.0" prefHeight="450.0" prefWidth="450.0">
                     <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="81.33334350585938" minWidth="10.0" prefWidth="47.333343505859375" />
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="75.33331298828125" minWidth="10.0" prefWidth="43.33335367838541" />
-                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="98.0" minWidth="10.0" prefWidth="44.99998982747394" />
-                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="110.66668701171875" minWidth="10.0" prefWidth="40.66666666666666" />
-                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="101.0" minWidth="10.0" prefWidth="44.66666666666666" />
-                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="128.0" minWidth="7.0" prefWidth="43.99999999999997" />
-                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="156.0" minWidth="0.0" prefWidth="44.66668701171875" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="156.0" minWidth="10.0" prefWidth="43.999979654947936" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="156.0" minWidth="10.0" prefWidth="55.333353678385436" />
+                      <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" />
+                      <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" />
+                       <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" />
+                       <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" />
+                       <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" />
+                       <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" />
+                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" />
+                        <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" />
+                        <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" />
                     </columnConstraints>
                     <rowConstraints>
-                      <RowConstraints maxHeight="43.66667175292969" minHeight="10.0" prefHeight="43.66667175292969" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="44.000010172526046" minHeight="10.0" prefHeight="44.000010172526046" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="42.99997965494791" minHeight="10.0" prefHeight="42.99997965494791" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="66.66668701171874" minHeight="10.0" prefHeight="47.00001017252603" vgrow="SOMETIMES" />
-                       <RowConstraints maxHeight="87.66665649414062" minHeight="10.0" prefHeight="42.33332316080728" vgrow="SOMETIMES" />
-                       <RowConstraints maxHeight="92.66664632161462" minHeight="10.0" prefHeight="44.66668701171875" vgrow="SOMETIMES" />
-                       <RowConstraints maxHeight="80.66666666666666" minHeight="10.0" prefHeight="43.99998982747394" vgrow="SOMETIMES" />
-                       <RowConstraints maxHeight="58.0" minHeight="10.0" prefHeight="44.666707356770814" vgrow="SOMETIMES" />
-                       <RowConstraints maxHeight="51.6666259765625" minHeight="10.0" prefHeight="46.6666259765625" vgrow="SOMETIMES" />
+                      <RowConstraints fillHeight="false" maxHeight="50.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
+                      <RowConstraints fillHeight="false" maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
+                      <RowConstraints fillHeight="false" maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
+                        <RowConstraints fillHeight="false" maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
+                       <RowConstraints fillHeight="false" maxHeight="50.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
+                       <RowConstraints fillHeight="false" maxHeight="50.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
+                       <RowConstraints fillHeight="false" maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
+                       <RowConstraints fillHeight="false" maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
+                       <RowConstraints fillHeight="false" maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                   </GridPane>
                </children>
             </AnchorPane>
          </items>
       </SplitPane>
-      <AnchorPane layoutX="380.0" layoutY="-1.0" prefHeight="424.0" prefWidth="265.0" />
+      <AnchorPane layoutX="491.0" layoutY="-1.0" prefHeight="492.0" prefWidth="206.0">
+         <children>
+            <ImageView fitHeight="202.0" fitWidth="206.0" layoutX="3.0" layoutY="290.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/17_MyShelfie_BGA/boards/bookshelf_orth.png" />
+               </image>
+            </ImageView>
+            <GridPane fx:id="bookshelfGridPane" hgap="5.0" layoutX="27.0" layoutY="303.0" prefHeight="165.0" prefWidth="155.0" vgap="5.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+            </GridPane>
+         </children></AnchorPane>
    </children>
 </AnchorPane>
