--- a/src/main/resources/scenesfxml/game_loop.fxml
+++ b/src/main/resources/scenesfxml/game_loop.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -8,7 +9,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="473.0" prefWidth="645.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.polimi.client.view.gui.sceneControllers.GameLoopController">
+<AnchorPane prefHeight="491.0" prefWidth="767.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.polimi.client.view.gui.sceneControllers.GameLoopController">
    <children>
       <SplitPane prefHeight="423.0" prefWidth="381.0">
          <items>
@@ -47,14 +48,14 @@
             </AnchorPane>
          </items>
       </SplitPane>
-      <AnchorPane layoutX="491.0" layoutY="-1.0" prefHeight="492.0" prefWidth="206.0">
+      <AnchorPane layoutX="491.0" layoutY="-1.0" prefHeight="494.0" prefWidth="293.0">
          <children>
-            <ImageView fitHeight="202.0" fitWidth="206.0" layoutX="3.0" layoutY="290.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="202.0" fitWidth="206.0" layoutX="43.0" layoutY="292.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/17_MyShelfie_BGA/boards/bookshelf_orth.png" />
                </image>
             </ImageView>
-            <GridPane fx:id="bookshelfGridPane" hgap="5.0" layoutX="27.0" layoutY="303.0" prefHeight="165.0" prefWidth="155.0" vgap="5.0">
+            <GridPane fx:id="bookshelfGridPane" hgap="5.0" layoutX="67.0" layoutY="305.0" prefHeight="165.0" prefWidth="155.0" vgap="5.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -71,6 +72,22 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
             </GridPane>
+            <ImageView fx:id="personalGoal" fitHeight="94.0" fitWidth="62.0" layoutX="4.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true" />
+            <Label layoutX="4.0" layoutY="7.0" text="Personal Goal" />
+            <ImageView fx:id="sharedGoal1View" fitHeight="62.0" fitWidth="94.0" layoutX="93.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="sharedGoal2View" fitHeight="62.0" fitWidth="94.0" layoutX="196.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true" />
+            <Label layoutX="142.0" layoutY="8.0" text="Common Goals" />
+            <GridPane fx:id="choosenCardsGridPane" layoutX="45.0" layoutY="213.0" prefHeight="49.0" prefWidth="199.0">
+              <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+            </GridPane>
+            <Label layoutX="94.0" layoutY="161.0" text="Current picked tiles" />
          </children></AnchorPane>
    </children>
 </AnchorPane>
