--- a/src/main/resources/scenesfxml/game_loop.fxml
+++ b/src/main/resources/scenesfxml/game_loop.fxml
@@ -72,10 +72,7 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
             </GridPane>
-            <ImageView fx:id="personalGoal" fitHeight="94.0" fitWidth="62.0" layoutX="4.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true" />
             <Label layoutX="4.0" layoutY="7.0" text="Personal Goal" />
-            <ImageView fx:id="sharedGoal1View" fitHeight="62.0" fitWidth="94.0" layoutX="93.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="sharedGoal2View" fitHeight="62.0" fitWidth="94.0" layoutX="196.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true" />
             <Label layoutX="142.0" layoutY="8.0" text="Common Goals" />
             <GridPane fx:id="choosenCardsGridPane" layoutX="45.0" layoutY="213.0" prefHeight="49.0" prefWidth="199.0">
               <columnConstraints>
@@ -88,6 +85,16 @@
               </rowConstraints>
             </GridPane>
             <Label layoutX="94.0" layoutY="161.0" text="Current picked tiles" />
+            <GridPane fx:id="goalsPane" layoutX="24.0" layoutY="65.0">
+              <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+            </GridPane>
          </children></AnchorPane>
    </children>
 </AnchorPane>
