--- a/src/main/resources/scenesfxml/game_loop.fxml
+++ b/src/main/resources/scenesfxml/game_loop.fxml
@@ -74,7 +74,7 @@
             </GridPane>
             <Label layoutX="4.0" layoutY="7.0" text="Personal Goal" />
             <Label layoutX="142.0" layoutY="8.0" text="Common Goals" />
-            <GridPane fx:id="choosenCardsGridPane" layoutX="45.0" layoutY="213.0" prefHeight="49.0" prefWidth="199.0">
+            <GridPane fx:id="choosenCardsPane" layoutX="45.0" layoutY="213.0" prefHeight="49.0" prefWidth="199.0">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
