--- a/src/main/resources/scenesfxml/game_loop.fxml
+++ b/src/main/resources/scenesfxml/game_loop.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.image.Image?>
@@ -95,6 +96,11 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
             </GridPane>
+            <Button layoutX="64.0" layoutY="274.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#col0" prefHeight="17.0" prefWidth="26.0" text="Button" />
+            <Button layoutX="98.0" layoutY="274.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#col1" prefHeight="17.0" prefWidth="26.0" text="Button" />
+            <Button layoutX="131.0" layoutY="274.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#col2" prefHeight="17.0" prefWidth="26.0" text="Button" />
+            <Button layoutX="163.0" layoutY="274.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#col3" prefHeight="17.0" prefWidth="26.0" text="Button" />
+            <Button layoutX="197.0" layoutY="274.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#col4" prefHeight="17.0" prefWidth="26.0" text="Button" />
          </children></AnchorPane>
    </children>
 </AnchorPane>
