--- a/src/main/resources/scenesfxml/game_loop.fxml
+++ b/src/main/resources/scenesfxml/game_loop.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="491.0" prefWidth="767.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.polimi.client.view.gui.sceneControllers.GameLoopController">
    <children>
@@ -73,8 +74,14 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
             </GridPane>
-            <Label layoutX="4.0" layoutY="7.0" text="Personal Goal" />
-            <Label layoutX="142.0" layoutY="8.0" text="Common Goals" />
+            <Label layoutX="4.0" layoutY="7.0" text="Personal Goal">
+               <font>
+                  <Font size="17.0" />
+               </font></Label>
+            <Label layoutX="142.0" layoutY="8.0" text="Common Goals">
+               <font>
+                  <Font size="17.0" />
+               </font></Label>
             <GridPane fx:id="choosenCardsPane" layoutX="45.0" layoutY="213.0" prefHeight="49.0" prefWidth="199.0">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -85,8 +92,11 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
             </GridPane>
-            <Label layoutX="94.0" layoutY="161.0" text="Current picked tiles" />
-            <GridPane fx:id="goalsPane" layoutX="24.0" layoutY="65.0">
+            <Label layoutX="94.0" layoutY="159.0" text="Current picked tiles">
+               <font>
+                  <Font size="17.0" />
+               </font></Label>
+            <GridPane fx:id="goalsPane" layoutX="24.0" layoutY="55.0">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -101,11 +111,21 @@
             <Button fx:id="column2" layoutX="131.0" layoutY="274.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#col2" prefHeight="17.0" prefWidth="26.0" text="Button" />
             <Button fx:id="column3" layoutX="163.0" layoutY="274.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#col3" prefHeight="17.0" prefWidth="26.0" text="Button" />
             <Button fx:id="column4" layoutX="197.0" layoutY="274.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#col4" prefHeight="17.0" prefWidth="26.0" text="Button" />
-            <Button layoutX="268.0" layoutY="305.0" mnemonicParsing="false" onAction="#showBookshelves" prefHeight="26.0" prefWidth="55.0" />
-            <Label layoutX="245.0" layoutY="263.0" prefHeight="40.0" prefWidth="116.0" text="Tap to show other players bookshelves" wrapText="true" />
+            <Button layoutX="268.0" layoutY="374.0" mnemonicParsing="false" onAction="#showBookshelves" prefHeight="26.0" prefWidth="55.0" />
+            <Label layoutX="245.0" layoutY="332.0" prefHeight="40.0" prefWidth="116.0" text="Tap to show other players bookshelves" wrapText="true" />
             <Button fx:id="tile0" layoutX="67.0" layoutY="187.0" mnemonicParsing="false" onAction="#deleteTile0" prefHeight="26.0" prefWidth="26.0" text="X" />
             <Button fx:id="tile1" layoutX="134.0" layoutY="187.0" mnemonicParsing="false" onAction="#deleteTile1" prefHeight="26.0" prefWidth="26.0" text="X" />
             <Button fx:id="tile2" layoutX="197.0" layoutY="187.0" mnemonicParsing="false" onAction="#deleteTile2" prefHeight="26.0" prefWidth="26.0" text="X" />
+            <Label layoutX="239.0" layoutY="434.0" prefHeight="20.0" prefWidth="73.0" text="My score:">
+               <font>
+                  <Font name="Helvetica" size="16.0" />
+               </font>
+            </Label>
+            <Label fx:id="myScore" layoutX="313.0" layoutY="434.0" prefHeight="20.0" prefWidth="31.0">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
          </children></AnchorPane>
    </children>
 </AnchorPane>
