--- a/src/main/resources/scenesfxml/game_loop.fxml
+++ b/src/main/resources/scenesfxml/game_loop.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
@@ -17,7 +18,7 @@
          <items>
             <AnchorPane prefHeight="491.0" prefWidth="476.0">
                <children>
-                  <ImageView fitHeight="491.0" fitWidth="493.0" layoutX="-1.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="491.0" fitWidth="493.0" layoutX="-1.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: none; -fx-scale-x: 1; -fx-scale-y: 1;">
                      <image>
                         <Image url="@../images/17_MyShelfie_BGA/boards/livingroom.png" />
                      </image>
@@ -52,7 +53,7 @@
       </SplitPane>
       <AnchorPane layoutX="491.0" layoutY="-1.0" prefHeight="494.0" prefWidth="293.0">
          <children>
-            <ImageView fitHeight="202.0" fitWidth="206.0" layoutX="43.0" layoutY="292.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="202.0" fitWidth="206.0" layoutX="43.0" layoutY="292.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: none; -fx-scale-x: 1; -fx-scale-y: 1;">
                <image>
                   <Image url="@../images/17_MyShelfie_BGA/boards/bookshelf_orth.png" />
                </image>
@@ -128,4 +129,7 @@
             </Label>
          </children></AnchorPane>
    </children>
+    <stylesheets>
+        <URL value="@../css/style_game_loop.css" />
+    </stylesheets>
 </AnchorPane>
