--- a/src/main/resources/scenesfxml/game_loop.fxml
+++ b/src/main/resources/scenesfxml/game_loop.fxml
@@ -83,7 +83,7 @@
                <font>
                   <Font size="17.0" />
                </font></Label>
-            <GridPane fx:id="choosenCardsPane" layoutX="45.0" layoutY="213.0" prefHeight="49.0" prefWidth="199.0">
+            <GridPane fx:id="chosenCardsPane" layoutX="45.0" layoutY="213.0" prefHeight="49.0" prefWidth="199.0">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
