--- a/src/main/resources/scenesfxml/menu_scene.fxml
+++ b/src/main/resources/scenesfxml/menu_scene.fxml
@@ -2,29 +2,31 @@
 
 <?import java.net.URL?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Slider?>
-<?import javafx.scene.effect.Reflection?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.Glow?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Box?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.polimi.client.view.gui.sceneControllers.MenuSceneController">
    <children>
-      <Slider fx:id="slider" layoutX="418.0" layoutY="350.0" />
-      <Button layoutX="164.0" layoutY="175.0" mnemonicParsing="false" onAction="#chooseRMI" text="RMI" textFill="#6ad04e">
+      <Button layoutX="120.0" layoutY="193.0" mnemonicParsing="false" onAction="#chooseRMI" prefHeight="59.0" prefWidth="126.0" text="RMI" textFill="#6ad04e">
          <font>
-            <Font size="19.0" />
+            <Font size="31.0" />
          </font>
          <effect>
-            <Reflection />
+            <Glow />
          </effect></Button>
-      <Button layoutX="366.0" layoutY="175.0" mnemonicParsing="false" onAction="#chooseSocket" text="SOCKET" textFill="RED">
+      <Button layoutX="337.0" layoutY="192.0" mnemonicParsing="false" onAction="#chooseSocket" prefHeight="66.0" prefWidth="160.0" text="SOCKET" textFill="RED">
          <font>
-            <Font size="19.0" />
-         </font></Button>
-      <Box fx:id="box" depth="100" height="100" layoutX="291.0" layoutY="80.0" width="100" />
+            <Font size="32.0" />
+         </font>
+         <effect>
+            <Glow />
+         </effect></Button>
+      <Label layoutY="100.0" prefHeight="30.0" prefWidth="600.0" text="CHOOSE YOUR CONNECTION TYPE" textFill="WHITE" />
    </children>
    <stylesheets>
+      <URL value="@../css/style_all.css"/>
       <URL value="@../css/style_menu.css" />
    </stylesheets>
 </AnchorPane>
