--- a/src/main/resources/scenesfxml/menu2_scene.fxml
+++ b/src/main/resources/scenesfxml/menu2_scene.fxml
@@ -29,4 +29,7 @@
    <effect>
       <InnerShadow />
    </effect>
+   <stylesheets>
+      <URL value="@../css/style_all.css"/>
+   </stylesheets>
 </AnchorPane>
