--- a/src/main/resources/scenesfxml/final_scene.fxml
+++ b/src/main/resources/scenesfxml/final_scene.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
+<?import java.net.URL?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.polimi.client.view.gui.sceneControllers.FinalSceneController">
    <children>
       <AnchorPane layoutY="-1.0" prefHeight="400.0" prefWidth="600.0">
@@ -40,4 +41,7 @@
          </children>
       </AnchorPane>
    </children>
+   <stylesheets>
+      <URL value="@../css/style_all.css"/>
+   </stylesheets>
 </AnchorPane>
