--- a/src/main/resources/scenesfxml/game_loop.fxml
+++ b/src/main/resources/scenesfxml/game_loop.fxml
@@ -131,5 +131,6 @@
    </children>
     <stylesheets>
         <URL value="@../css/style_game_loop.css" />
+        <URL value="@../css/style_all.css"/>
     </stylesheets>
 </AnchorPane>
