--- a/src/main/resources/css/style_game_loop.css
+++ b/src/main/resources/css/style_game_loop.css
@@ -5,11 +5,13 @@
     -fx-background-color: transparent;
 }
 
-.image-view:hover {
+/*.image-view:hover {
     -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.5), 10, 0.5, 0, 0);
     -fx-scale-x: 1.2;
     -fx-scale-y: 1.2;
     -fx-translate-z: 10;
     -fx-transition: translate-z 0.2s;
 }
+
+ */
 
